Fixing razor cursor, which was broken on Windows (i.e. webkit backend) when we moved from PNG to SVG icon file. Also, adding a new way to target CSS for webkit VS webengine.

--- a/src/timeline/media/css/main.css
+++ b/src/timeline/media/css/main.css
@@ -303,7 +303,11 @@ img {
   margin-right: 1px;
 }
 
-.razor_cursor {
+.webkit .razor_cursor {
+  cursor: url(../images/razor_line_with_razor.png), default !important;
+}
+
+.webengine .razor_cursor {
   cursor: url(../images/razor_line_with_razor.svg), default !important;
 }
 
